package strategy.improve;

/**
 * @author YangLiuQing
 * @date 2020/6/12 21:32
 */
public interface FlyBehavior {

    public void fly();
}
